--- a/app/scripts/invoice/templates/invoices.tpl.html
+++ b/app/scripts/invoice/templates/invoices.tpl.html
@@ -9,7 +9,7 @@
   <input type="text" class="form-control" placeholder="Rechercher une facture" ng-model="query">
 </div>
 
-<img src="/images/loading.gif" ng-hide="invoices !== null">
+<img src="images/loading.gif" ng-hide="invoices !== null">
 
 <table class="table table-striped">
   <thead>
@@ -26,7 +26,7 @@
     <tr ng-repeat="invoice in invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | orderBy:sorter(predicate):reverse">
       <td ng-bind-html="invoice.object.getDecoratedStatus()"></td>
       <td ng-bind="invoice.object.object"></td>
-      <td><a ng-href="/#/clients/{{ invoice.object.client.id }}" ng-bind="invoice.object.getClient().object.name"></a></td>
+      <td><a ng-href="#/clients/{{ invoice.object.client.id }}" ng-bind="invoice.object.getClient().object.name"></a></td>
       <td>
         <p ng-if="invoice.object.date"><span>Emission :</span> {{ invoice.object.date | date }}</p>
         <p ng-if="invoice.object.dueDate"><span>Dûe :</span> {{ invoice.object.dueDate | date }}</p>
@@ -37,7 +37,7 @@
         <p ng-if="invoice.object.getStatus() === 'open'"><span>Restant dû :</span> {{ invoice.object.getDue() | currency:'€' }}</p>
       </td>
       <td style="text-align:right;">
-        <a ng-href="/#/invoices/{{ invoice.id }}" class="btn btn-default">Ouvrir</a>
+        <a ng-href="#/invoices/{{ invoice.id }}" class="btn btn-default">Ouvrir</a>
       </td>
     </tr>
   </tbody>
@@ -47,7 +47,7 @@
       <td></td>
       <td></td>
       <td></td>
-      <td ng-bind="invoices | total | currency:'€'"></td>
+      <td ng-bind="invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total | currency:'€'"></td>
       <td></td>
     </tr>
   </tfoot>
