--- a/app/styles/print.css
+++ b/app/styles/print.css
@@ -1,531 +1,134 @@
-.navbar {
-  display: none;
-}
-.container {
-  max-width: none;
+.navbar, .printme { display: none; }
+
+@media print {
+  @page {
+    size: A4 portrait;
+    margin: 0;
+  }
 }
 
-.printme {
-  display: none;
-}
-
-/* ==========================================================================
-   Base
-   ========================================================================== */
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- * 3.Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
- *    `em` units.
- */
-/* line 78, ../../src/bower_components/normalize-scss/_normalize.scss */
 html {
   font-family: sans-serif;
-  /* 1 */
   -ms-text-size-adjust: 100%;
-  /* 2 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
-
-/**
- * Remove default margin.
- */
-/* line 91, ../../src/bower_components/normalize-scss/_normalize.scss */
-body {
-  margin: 0;
-  padding: 0;
-}
-
-/* ==========================================================================
-   Links
-   ========================================================================== */
-/**
- * Address `outline` inconsistency between Chrome and other browsers.
- */
-/**
- * Improves readability when focused and also mouse hovered in all browsers.
- */
-/* line 108, ../../src/bower_components/normalize-scss/_normalize.scss */
-a:focus {
-  outline: thin dotted;
-}
-/* line 111, ../../src/bower_components/normalize-scss/_normalize.scss */
-a:active, a:hover {
-  outline: 0;
-}
-
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-/**
- * Addresses font sizes and margins set differently in IE 6/7.
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 127, ../../src/bower_components/normalize-scss/_normalize.scss */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/**
- * Address styling not present in IE 8/9, Safari 5, and Chrome.
- */
-/* line 166, ../../src/bower_components/normalize-scss/_normalize.scss */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/**
- * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
- */
-/* line 175, ../../src/bower_components/normalize-scss/_normalize.scss */
-b,
-strong {
-  font-weight: bold;
-}
-
-/**
- * Address styling not present in Safari 5 and Chrome.
- */
-/* line 189, ../../src/bower_components/normalize-scss/_normalize.scss */
-dfn {
-  font-style: italic;
-}
-
-/**
- * Address differences between Firefox and other browsers.
- */
-/* line 197, ../../src/bower_components/normalize-scss/_normalize.scss */
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-/**
- * Addresses styling not present in IE 8/9.
- */
-/* line 207, ../../src/bower_components/normalize-scss/_normalize.scss */
-mark {
-  background: #ff0;
-  color: #000;
-}
-
-/**
- * Addresses margins set differently in IE 6/7.
- */
-/**
- * Correct font family set oddly in Safari 5 and Chrome.
- */
-/* line 230, ../../src/bower_components/normalize-scss/_normalize.scss */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-
-/**
- * Improve readability of pre-formatted text in all browsers.
- */
-/* line 242, ../../src/bower_components/normalize-scss/_normalize.scss */
-pre {
-  white-space: pre-wrap;
-}
-
-/**
- *  Set consistent quote types.
- */
-/* line 250, ../../src/bower_components/normalize-scss/_normalize.scss */
-q {
-  quotes: "\201C" "\201D" "\2018" "\2019";
-}
-
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-/* line 278, ../../src/bower_components/normalize-scss/_normalize.scss */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-/* line 287, ../../src/bower_components/normalize-scss/_normalize.scss */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-/* line 294, ../../src/bower_components/normalize-scss/_normalize.scss */
-sup {
-  top: -0.5em;
-}
-
-/* line 298, ../../src/bower_components/normalize-scss/_normalize.scss */
-sub {
-  bottom: -0.25em;
-}
-
-/* ==========================================================================
-   Embedded content
-   ========================================================================== */
-/**
- * 1. Remove border when inside `a` element in IE 8/9.
- * 2. Improves image quality when scaled in IE 7.
- */
-/* line 354, ../../src/bower_components/normalize-scss/_normalize.scss */
-img {
-  border: 0;
-}
-
-/**
- * Correct overflow displayed oddly in IE 9.
- */
-/* line 365, ../../src/bower_components/normalize-scss/_normalize.scss */
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* ==========================================================================
-   Figures
-   ========================================================================== */
-/**
- * Address margin not present in IE 8/9 and Safari 5.
- */
-/* line 377, ../../src/bower_components/normalize-scss/_normalize.scss */
-figure {
-  margin: 0;
-}
-
-/* ==========================================================================
-   Forms
-   ========================================================================== */
-/**
- * Define consistent border, margin, and padding.
- */
-/* line 389, ../../src/bower_components/normalize-scss/_normalize.scss */
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- * 3. Corrects text not wrapping in Firefox 3.
- * 4. Corrects alignment displayed oddly in IE 6/7.
- */
-/* line 402, ../../src/bower_components/normalize-scss/_normalize.scss */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * 1. Correct font family not being inherited in all browsers.
- * 2. Correct font size not being inherited in all browsers.
- * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
- * 4. Improves appearance and consistency in all browsers.
- */
-/* line 421, ../../src/bower_components/normalize-scss/_normalize.scss */
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 2 */
-  margin: 0;
-  /* 3 */
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-/* line 437, ../../src/bower_components/normalize-scss/_normalize.scss */
-button,
-input {
-  line-height: normal;
-}
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
- * Correct `select` style inheritance in Firefox 4+ and Opera.
- */
-/* line 449, ../../src/bower_components/normalize-scss/_normalize.scss */
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- * 4. Removes inner spacing in IE 7 without affecting normal text inputs.
- *    Known issue: inner spacing remains in IE 6.
- */
-/* line 466, ../../src/bower_components/normalize-scss/_normalize.scss */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */
-  cursor: pointer;
-  /* 3 */
-}
-
-/**
- * Re-set default cursor for disabled elements.
- */
-/* line 479, ../../src/bower_components/normalize-scss/_normalize.scss */
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * 1. Address box sizing set to `content-box` in IE 8/9.
- * 2. Remove excess padding in IE 8/9.
- * 3. Removes excess padding in IE 7.
- *    Known issue: excess padding remains in IE 6.
- */
-/* line 491, ../../src/bower_components/normalize-scss/_normalize.scss */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
- *    (include `-moz` to future-proof).
- */
-/* line 506, ../../src/bower_components/normalize-scss/_normalize.scss */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* 2 */
-  box-sizing: content-box;
-}
-
-/**
- * Remove inner padding and search cancel button in Safari 5 and Chrome
- * on OS X.
- */
-/* line 519, ../../src/bower_components/normalize-scss/_normalize.scss */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-/* line 528, ../../src/bower_components/normalize-scss/_normalize.scss */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * 1. Remove default vertical scrollbar in IE 8/9.
- * 2. Improve readability and alignment in all browsers.
- */
-/* line 538, ../../src/bower_components/normalize-scss/_normalize.scss */
-textarea {
-  overflow: auto;
-  /* 1 */
-  vertical-align: top;
-  /* 2 */
-}
-
-/* ==========================================================================
-   Tables
-   ========================================================================== */
-/**
- * Remove most spacing between table cells.
- */
-/* line 551, ../../src/bower_components/normalize-scss/_normalize.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-@page {
-  size: A4;
-  margin: 0;
-}
-
-/* line 9, ../../src/styles/styles.scss */
-html,
-body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: .5cm .7cm;
 }
 
-/* line 14, ../../src/styles/styles.scss */
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;
-  color: #555555;
+  margin: 0;
   padding: 0;
-  padding-top: 200px;
+  width: 100%;
+  height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
 }
 
-/* line 24, ../../src/styles/styles.scss */
-p {
-  margin: 0 0 5px 0;
-}
-
-/**
- * Sender part
- */
-/* line 31, ../../src/styles/styles.scss */
-.kud-Sender {
+header {
+  font-family: 'Kaushan Script', cursive;
   position: absolute;
-  left: 15px;
-  top: 15px;
+  top: 0;
+  right: 0;
+  color: #888;
+}
+header img {
+  height: 30px;
+}
+header p {
+  display: inline;
+  margin-left: 1cm;
 }
 
-/* line 37, ../../src/styles/styles.scss */
-.kud-Sender-heading {
-  font-weight: bold;
-  font-size: 1.5em;
+div.infoinvoice {
+  margin-top: 2cm;
+}
+h1 {
+  font-family: 'Kaushan Script', cursive;
+  color: #888;
+}
+h1 span {
+  font-size: .4cm;
+}
+h2 {
+  font-family: 'Kaushan Script', cursive;
+  color: #888;
+  font-size: .5cm;
+  margin: .2cm 0;
+}
+div.infoinvoice p {
   margin: 0;
 }
-
-.kud-Sender-heading img {
-  height: 50px;
+div.infoinvoice section {
+  float: left;
+  margin-left: 5%;
 }
 
-/* line 43, ../../src/styles/styles.scss */
-.kud-Sender-title {
-  font-style: italic;
+table {
+  width: 90%;
+  margin: 2cm 5% 0 5%;
+}
+table tbody {
+  border-left: .1cm solid #ddd;
+  border-right: .1cm solid #ddd;
+  border-bottom: .05cm solid #ddd;
+}
+table tbody tr:nth-child(odd) {
+  background-color: #ddd;
+}
+table td, table th {
+  padding: .1cm .3cm;
+}
+table tfoot {
+  border-width: 0 .1cm .1cm .1cm;
+  border-color: #ddd;
+  border-style: solid;
 }
 
-/**
- * Addressee
- */
-/* line 50, ../../src/styles/styles.scss */
-.kud-Addressee {
-  position: absolute;
-  top: 100px;
-  right: 15px;
+ul {
+  margin: 1cm 8%;
+  padding: 0;
 }
-
-/* line 56, ../../src/styles/styles.scss */
-.kud-Addressee p:first-child {
-  font-weight: bold;
-  font-size: 1.5em;
+ul li {
   margin: 0;
+  padding: 0;
 }
 
-/**
- * Titles
- */
-/* line 65, ../../src/styles/styles.scss */
-.kud-Titles {
+footer {
   position: absolute;
-  right: 15px;
-  top: 15px;
-}
-
-/* line 71, ../../src/styles/styles.scss */
-.kud-Titles-heading {
-  font-weight: bold;
-}
-
-/**
- * Content part
- */
-/* line 78, ../../src/styles/styles.scss */
-.kud-Content-heading {
-  font-weight: bold;
-}
-
-/**
- * Details
- */
-/* line 85, ../../src/styles/styles.scss */
-.kud-Details {
-  width: 100%;
-  margin: 20px 0;
-}
-/* line 89, ../../src/styles/styles.scss */
-.kud-Details th {
-  text-align: left;
-  border: 2px solid #555555;
-  border-left: 0px;
-  border-right: 0px;
-}
-/* line 97, ../../src/styles/styles.scss */
-.kud-Details th,
-.kud-Details td {
-  padding: 5px;
-}
-/* line 102, ../../src/styles/styles.scss */
-.kud-Details tr:nth-child(2) td {
-  padding-top: 20px;
-}
-/* line 107, ../../src/styles/styles.scss */
-.kud-Details td:last-child {
-  text-align: right;
-}
-
-/* line 112, ../../src/styles/styles.scss */
-.kud-Details-total {
-  font-weight: bold;
-}
-
-/**
- * Separator
- */
-/* line 120, ../../src/styles/styles.scss */
-.kud-Separator {
-  background: #555555;
-  height: 2px;
-  width: 100%;
-  margin: 20px 0;
-}
-
-/**
- * Little sentence on the bottom on the page, you know
- */
-/* line 130, ../../src/styles/styles.scss */
-.kud-LittleSentence {
-  font-style: italic;
-  position: absolute;
-  bottom: 5px;
-  margin-bottom: 5px;
-  font-size: .6em;
+  bottom: 0;
+  color: #888;
+  font-size: .2cm;
   text-align: justify;
+}
+footer div {
+  margin-bottom: .5cm;
+  font-size: .33cm
+}
+footer section {
+  float: left;
+  width: 28%;
+  margin: 0;
+}
+footer section strong {
+  font-size: .4cm;
+  font-weight: bold;
+}
+footer section em {
+  font-size: .28cm;
+  font-weight: bold;
+}
+footer section:first-child {
+  margin-left: 5%;
+}
+footer section:last-child {
+  margin-right: 5%;
+  width: 30%;
+  margin-left: 4%;
+}
+footer p {
+  margin: 0;
 }
