--- a/app/scripts/invoice/templates/invoices.tpl.html
+++ b/app/scripts/invoice/templates/invoices.tpl.html
@@ -47,7 +47,11 @@
       <td></td>
       <td></td>
       <td></td>
-      <td ng-bind="invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total | currency:'€'"></td>
+      <td>
+        <p><span>HT : </span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getPrice' | currency:'€' }}</p>
+        <p><span>TTC :</span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getATI' | currency:'€' }}</p>
+        <p><span>Restant dû :</span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getDue' | currency:'€' }}</p>
+      </td>
       <td></td>
     </tr>
   </tfoot>
