--- a/app/scripts/invoice/templates/invoices.tpl.html
+++ b/app/scripts/invoice/templates/invoices.tpl.html
@@ -43,16 +43,11 @@
   </tbody>
   <tfoot>
     <tr class="total">
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>
+      <td colspan="6" style="text-align:right;padding-right:10%;">
         <p><span>HT : </span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getPrice' | currency:'€' }}</p>
         <p><span>TTC :</span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getATI' | currency:'€' }}</p>
         <p><span>Restant dû :</span> {{ invoices | filter:finder(['num', 'object', 'getClient.object.name', 'getStatus', 'getPrice'], query) | total:'getDue' | currency:'€' }}</p>
       </td>
-      <td></td>
     </tr>
   </tfoot>
 </table>
