Add comment ti pdf

--- a/app/scripts/invoice/templates/print.tpl.html
+++ b/app/scripts/invoice/templates/print.tpl.html
@@ -18,10 +18,14 @@
   </section>
 </div>
 
+<div class="clearfix infoinvoice">
+  <section>{{ invoice.object.comment }}</section>
+</div>
+
 <table>
   <thead>
     <tr>
-      <th>Prestation</th>
+      <th style="width:50%;">Prestation</th>
       <th style="text-align:right;">Prix</th>
       <th style="text-align:right;">Quantité</th>
       <th style="text-align:right;">Total (HT)</th>
