--- a/app/scripts/home/templates/home.tpl.html
+++ b/app/scripts/home/templates/home.tpl.html
@@ -29,7 +29,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">Évolution chiffre d'affaire</div>
       <div class="panel-body">
-        <cjs-bar dataset="d1" width="1100" height="400"></cjs-bar>
+        <!-- <chartjs width="d1.width" height="d1.height" data="d1.data" options="d1.options" is-type="Doughnut"></chartjs> -->
       </div>
     </div>
 
